# App.Core/Handlers/AddQuestionAnswerHandler.cs
@@ -12,22 +12,11 @@ namespace App.Core.Handlers
 {
     public class AddQuestionAnswerRequest : IRequest<AddQuestionAnswerResponse>, IUserRequest
     {
-        
             [DataMember(Order = 1)]
             public string QuestionId { get; set; }
             [DataMember(Order = 2)]
             public string Answer { get; set; }
             [DataMember(Order = 3)]
-            public DateTime CreatedAt { get; set; }
-            [DataMember(Order = 4)]
-            public string CreatedBy { get; set; }
-            [DataMember(Order = 5)]
-            public DateTime UpdatedAt { get; set; }
-            [DataMember(Order = 6)]
-            public string UpdatedBy { get; set; }
-            [DataMember(Order = 7)]
-            public int Votes { get; set; }
-            [DataMember]
             public string UserId { get; set; }
     }
 
@@ -72,11 +61,11 @@ namespace App.Core.Handlers
             
             record.QuestionId = request.QuestionId; 
             record.Answer = request.Answer; 
-            record.CreatedAt = request.CreatedAt; 
-            record.CreatedBy = request.CreatedBy; 
-            record.UpdatedAt = request.UpdatedAt; 
-            record.UpdatedBy = request.UpdatedBy; 
-            record.Votes = request.Votes; 
+            record.CreatedAt = DateTime.Now;
+            record.CreatedBy = request.UserId;
+            record.UpdatedAt = DateTime.Now; 
+            record.UpdatedBy = request.UserId; 
+            record.Votes = 0; 
     
             HandlerUtilities.TimeStampRecord(record, request.UserId, true);
             var returnRecord = _repository.Add(record);
